--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "postcss": "^8.1.14"
     },
     "dependencies": {
+        "mitt": "^3.0.0",
         "vue": "^3.2.36",
-        "vue-loader": "^17.0.1"
+        "vue-loader": "^17.0.1",
+        "vue-router": "^4.0.13"
     }
 }
